k8s-deploy/03-nacos/05-nacos-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nacos     # nacos-0 nacos-1 nacos-2
  namespace: dev
spec:
  serviceName: "nacos-svc"
  podManagementPolicy: Parallel
  replicas: 3
  selector:
    matchLabels:
      app: nacos

  template:
    metadata:
      labels:
        app: nacos
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values: ["nacos"]
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: nacos
        image: uhub.service.ucloud.cn/oldxu/nacos/nacos-server:v2.3.2
        resources:
          requests:
            memory: "2Gi"
            cpu: "500m"
        ports:
        - name: client
          containerPort: 9848
        - name: server
          containerPort: 8848
        - name: raft
          containerPort: 9849
        # Nacos链接数据库的信息
        volumeMounts:       # 将data卷的中peer-finder子目录挂载到主容器的/home/nacos/plugins/peer-finder
        - name: data
          mountPath: /home/nacos/plugins/peer-finder
          subPath: peer-finder
        - name: data
          mountPath: /home/nacos/data
          subPath: data
        - name: data
          mountPath: /home/nacos/logs
          subPath: logs

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteMany" ]
        storageClassName: "nfs-provisioner-storage"
        resources:
          requests:
            storage: 20Gi
