k8s-deploy/03-nacos/01-mysql-nacos-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-nacos-svc
  namespace: dev
spec:
  clusterIP: None
  selector:
    app: mysql
    role: nacos
  ports:
  - port: 3306
    targetPort: 3306
