k8s-deploy/03-nacos/03-nacos-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: nacos-svc
  namespace: dev
spec:
  publishNotReadyAddresses: true 
  clusterIP: None
  selector:
    app: nacos
  ports:
    - name: server
      port: 8848
      targetPort: 8848
    - name: client-rpc
      port: 9848
      targetPort: 9848
    - name: raft
      port: 9849
      targetPort: 9849
