k8s-deploy/03-nacos/06-nacos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nacos-ingress
  namespace: dev
spec:
  ingressClassName: "nginx"
  rules:
  - host: "nacos.oldxu.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nacos-svc
            port:
              name: server
